# portal

./: .gitignore  Dockerfile  README.md  pyproject.toml
.agents/docs/: portal-architecture.md
.github/workflows/: ci.yml
src/portal/: __main__.py  cli.py  config.py  cropper.py  detector.py  processor.py  sinks.py
tests/: test_cli.py  test_config.py  test_cropper.py  test_detector.py  test_processor.py  test_sinks.py
