[project]
name = "portal"
version = "0.1.0"
description = "Autonomous video cropping - detect people in frame and crop to focus on them"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10",
    "ultralytics>=8.3",
    "numpy>=2.0",
    "typer>=0.15",
    "lapx>=0.9.4",
]

[project.scripts]
portal = "portal.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pytest>=8",
    "pyright>=1.1",
]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
include = ["src/portal"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
